--- a/packages/admin-stories/.storybook/preview-head.html
+++ b/packages/admin-stories/.storybook/preview-head.html
@@ -6,4 +6,13 @@
         line-height: 1.4;
         -webkit-font-smoothing: antialiased;
     }
+
+    pre:not(.prismjs) {
+        background-color: #efefef;
+        font-size: 10px;
+        padding: 15px;
+    }
+    code {
+        font-size: 10px;
+    }
 </style>
